crates/carta/tests/snapshots/golden_writer__docbook__links__autolink-decoded-label.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <link xlink:href="http://example.com/a%20b">http://example.com/a%20b</link>
</para>
<para>
  <link xlink:href="http://example.com/a%20b">http://example.com/a b</link>
</para>
