crates/carta/tests/snapshots/golden_writer__docbook__links__title-with-quote.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<para>
  <link xlink:href="http://example.com/">x</link>
</para>
<para>
  <link xlink:href="http://example.com/">y</link>
</para>
